This fixes the navbar to the top once it hits the page top.
The feature works on latest browsers, otherwise the navbar move out of view as before.

Also I created a class for padding icons because some of our icon padding was inconssitent

--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -12,7 +12,7 @@
       right: -5px;
     }
   }
-  nav{
+  nav.navbar {
     // decrease the percentage if we decide to add more to the nav bar
     padding: 5px 8% 5px 8%;
     .navbar-nav {
@@ -23,4 +23,9 @@
       }
     }
   }
+}
+.sticky-top {
+  position: -webkit-sticky;
+  position: sticky;
+  top: -1px;
 }
